--- a/scripts/report.ipynb
+++ b/scripts/report.ipynb
@@ -106,7 +106,11 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "На графиках ниже мы можем видеть вполне ожидаемый результат, для моделей с $ b = \\{5, 10, 30\\} $ точность ухудшается вместе с уменьшением количества токенов поступающих на вход",
+   "source": [
+    "На графиках ниже мы можем видеть вполне ожидаемый результат, для моделей с $ b = \\{5, 10, 30\\} $ точность ухудшается вместе с уменьшением количества токенов поступающих на вход. \n",
+    "\n",
+    "![](../images/check_last_n_tokens_quality.png \"Title\") "
+   ],
    "id": "b68e1f869c6d3437"
   },
   {
