Update configs and report.ipynb.

--- a/scripts/report.ipynb
+++ b/scripts/report.ipynb
@@ -99,7 +99,7 @@
     "> \n",
     "> В таком случае, модель имеет возможность использовать часть токенов как хранилище информации с предыдущего шага.\n",
     "\n",
-    "Чтобы понять на сколько мы можем обрезать количество токенов которые подаются модель замаскируем часть из них маской и посмотрим на метрики.\n"
+    "Чтобы понять на сколько мы можем обрезать количество токенов которые подаются модель замаскируем часть из них и посмотрим на метрики.\n"
    ],
    "id": "19658e4437a1ac08"
   },
@@ -107,9 +107,11 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "На графиках ниже мы можем видеть вполне ожидаемый результат, для моделей с $ b = \\{5, 10, 30\\} $ точность ухудшается вместе с уменьшением количества токенов поступающих на вход. \n",
+    "На графиках ниже мы можем видеть вполне ожидаемый результат, для моделей с $ b = \\{5, 10, 20\\} $ точность ухудшается вместе с уменьшением количества токенов поступающих на вход. \n",
     "\n",
-    "![](../images/check_last_n_tokens_quality.png \"Title\") "
+    "![](../images/check_last_n_tokens_quality.png \"Title\") \n",
+    "\n",
+    "Также интересно, что при удваивании количества итераций при инференсе мы получаем ошибку больше на каждом этапе отбрасывания $ n $ токенов. Это может происходить в результате того, что модели при увеличенном количестве итераций, от изначальной тренировки, более чувствительны к нехватке токенов. "
    ],
    "id": "b68e1f869c6d3437"
   },
