--- a/report.ipynb
+++ b/report.ipynb
@@ -143,6 +143,115 @@
    "cell_type": "markdown",
    "source": "",
    "id": "75b4da2ab18c8095"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "f13f6e2f407e3421"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Отчет по исследованию Looped Transformers и их возможностей.\n",
+    "Мини исследование-отчет по статье - https://arxiv.org/abs/2311.12424\n",
+    "\n",
+    "## Оглавление\n",
+    "- [Сравнение эффективности Looped TFs с обычными TFs](#basic-comparision)\n",
+    "- - [Итеративные свойства](#basic-comparision-iter-props)\n",
+    "- - [Дополнительно](#basic-comparision-additional)\n",
+    "- [N токенов](#n-tokens)\n",
+    "- - [Попробуем брать N последних токенов](#n-last-tokens)\n",
+    "- - [Попробуем брать N первых токенов](#n-first-tokens)\n",
+    "- [Second Item](#item-three)\n",
+    "\n",
+    "<a id=\"basic-comparision\"></a>\n",
+    "## Сравнение эффективности Looped TFs с обычными TFs\n",
+    "Все эксперементы проводились с выключенным Mixed Precision, по скольку он не влиял на скорость обучения - видимо из-за того что gpt2_nano не может использовать GPU эффективно.\n",
+    "Одна часть эксперементов проводилась на локальной машине с Nvidia 3060ti mobile, а вторая на удаленной машине с Nvidia Tesla P100.\n",
+    "\n",
+    "Посмотрим на скорость сходимости трансформера (TF) с параметром $L = 12$ и Looped TFs с параметрами $ L = 1; b = \\{5, 10, 20, 25\\} T= \\{10, 20\\}$. Были использованы следующие параметры Heads=4, dims=10, points=31. Потери масштабированы на размерность регрессии.\n",
+    "\n",
+    "|                                                 |                                            |\n",
+    "|-------------------------------------------------|--------------------------------------------|\n",
+    "| ![](images/Compare_losses_b_n_t_10.png \"Title\") | ![](images/Compare_losses_b_n.png \"Title\") |\n",
+    "\n",
+    "Как можно видеть из графиков, Looped TFs при увеличении $ b $ дает улучшение метрик. \n",
+    "При количестве параметров в 12 раз меньшим, чем у обычного трансформера, он показывает неплохие показатели. \n",
+    "Конфигурации для запуска моделей взяты из папки эксперимента №5.\n",
+    "\n",
+    "<a id=\"basic-comparision-iter-props\"></a>\n",
+    "### Итеративные свойства\n",
+    "По скольку в статье подразумевается что Looped TFs имеют итеративные свойства, мы можем их проверить на примере линейной регрессии.\n",
+    "Для этого обучим Looped TFs со значениями $ b={5, 10, 20}; T={ 20, 10} $  и посмотрим на их сходимость при больших $ b $.\n",
+    "\n",
+    "|           |       |\n",
+    "|-----------|-------|\n",
+    "| ![alt text](images/check_for_convergence_properties.png \"Title\")    | ![alt text](images/check_for_scheduling_convergence_properties_noisy_linear_regression_T_10_short.png \"Title\") |\n",
+    "\n",
+    "Из графика можем видеть что при большем $ b $ на тренировке Looped TF показывает себя лучше при $ b > 5 $.  \n",
+    "Блокнот `experiment_schedule.ipynb`. \n",
+    "\n",
+    "<a id=\"basic-comparision-additional\"></a>\n",
+    "### Дополнительно\n",
+    "Появилась гипотеза о том, что шедулинг может помочь для обобщающих способностей модели. \n",
+    "Увеличивая параметр $ b $ во время тренировки можно получить лучшую обобщающую способность, \n",
+    "однако в процессе эксперимента со слабыми моделями это явно не подтвердилось. \n",
+    "При тренировке с вариативным & b & и , модель дает меньшую ошибку на большем количестве итераций при $ T=20 $, \n",
+    "однако при $ T=10 $ утверждать то же не можем.  \n",
+    "Опыты проводились в блокноте `experiment_shedule.ipynb` и в блокноте `experiment_shedule_2.ipynb`.\n",
+    "\n",
+    "|           |                                                                                           |\n",
+    "|-----------|-------------------------------------------------------------------------------------------|\n",
+    "| ![](images/check_for_scheduling_convergence_properties.png \"Title\")    | ![](images/check_for_scheduling_convergence_properties_train_steps_10000.png \"Title\")     |\n",
+    "\n",
+    "Из графика можно видеть, что в отличии от моделей с параметрами $ b=5; b=10; b=15 $, у модели с варьированием $ b $ на этапе тренировки показатели точности сильно разнятся. \n",
+    "\n",
+    "<a id=\"n-tokens\"></a>\n",
+    "## N токенов\n",
+    "Проверим гипотезу\n",
+    "\n",
+    "> ***Гипотеза***\n",
+    ">\n",
+    "> В таком случае, модель имеет возможность использовать часть токенов как хранилище информации с предыдущего шага.\n",
+    "\n",
+    "<a id=\"n-last-tokens\"></a>\n",
+    "### Попробуем брать N последних токенов\n",
+    "Чтобы понять на сколько мы можем обрезать количество токенов которые подаются модель замаскируем часть из них и посмотрим на метрики.\n",
+    "Модели обучались с параметрами $ b = {5, 10, 20}; T = {10, 20} $ при количестве шагов равным 20000. \n",
+    "\n",
+    "На графиках ниже мы можем видеть вполне ожидаемый результат, для моделей с $ b = \\{5, 10, 20\\} $ обученных с параметром $ T = \\{10, 20\\}$ точность ухудшается вместе с уменьшением количества токенов поступающих на вход.\n",
+    "\n",
+    "![](images/check_last_n_tokens_quality.png \"check_last_n_tokens_quality\")\n",
+    "\n",
+    "Также интересно, что при увеличении количества итераций при инференсе мы получаем такую же ошибку на каждом этапе отбрасывания $ n $ токенов.\n",
+    "Можно сделать вывод что использование последних $ n $ токенов сильно влияет на качество, но что если брать $ n $ первых токенов?\n",
+    "\n",
+    "<a id=\"n-first-tokens\"></a>\n",
+    "### Попробуем брать N первых токенов\n",
+    "Попробуем маскировать все токены кроме $ n $ первых и посмотрим на метрики модели.\n",
+    "\n",
+    "![](images/check_first_n_tokens_quality.png \"check_first_n_tokens_quality\")\n",
+    "\n",
+    "Как можем видеть ощутимой разницы это не дало, видимо для зацикленных трансформеров первые и последние токены имеют схожую важность. \n",
+    "Меньшее количество токенов негативно влияет на итоговые показатели модели. \n",
+    "Эксперименты проводились в блокнотах `experiment_last_n_tokens.ipynb` и `experiment_first_n_tokens.ipynb`.\n",
+    "\n",
+    "## Looped n-layers.\n",
+    "Проверим возможности зацикленных трансформеров при обучении с количеством слоев $ L > 1 $.\n"
+   ],
+   "id": "908bc8e9d7c3f4e6"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "845687d99f8c95d2"
   }
  ],
  "metadata": {
