Update configs and REPORT.md

--- a/scripts/experiment_ssm.ipynb
+++ b/scripts/experiment_ssm.ipynb
@@ -6,97 +6,63 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-01T05:12:06.839055Z",
-     "start_time": "2024-08-01T05:12:06.832396Z"
+     "end_time": "2024-08-03T08:39:13.519452Z",
+     "start_time": "2024-08-03T08:39:13.505918Z"
     }
    },
    "source": [
     "import torch\n",
     "\n",
-    "from ssm_models import SelectiveScanModelLooped\n",
+    "from models import MambaModel\n",
     "from models import TransformerModelLooped\n",
     "from curriculum import CurriculumSimple\n",
-    "from train import train_without_config, validate_model"
+    "from train import train_without_config, validate_model\n",
+    "\n",
+    "n_dims = 10"
    ],
-   "execution_count": 6,
-   "outputs": []
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-01T05:04:00.435485Z",
-     "start_time": "2024-08-01T05:04:00.421976Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "n_dims = 10",
-   "id": "10314302ec6743b2",
-   "execution_count": 2,
-   "outputs": []
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-01T05:12:17.389425Z",
-     "start_time": "2024-08-01T05:12:08.384564Z"
+     "end_time": "2024-08-03T08:40:55.714697Z",
+     "start_time": "2024-08-03T08:39:15.965819Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "model_ssm_b5 = TransformerModelLooped(n_dims=n_dims,\n",
-    "                                 n_positions=101,\n",
-    "                                 n_embd=256,\n",
-    "                                 n_layer=1,\n",
-    "                                 n_head=4,\n",
-    "                                 pred_type=\"regression\").cuda()\n",
+    "model_ssm = MambaModel(n_dims=n_dims,\n",
+    "                       n_positions=101,\n",
+    "                       n_embd=256,\n",
+    "                       n_layer=1,\n",
+    "                       pred_type=\"regression\").cuda()\n",
     "\n",
-    "cirriculum_ssm_b5 = CurriculumSimple(n_dims, 31, 5, [5000, n_dims, 0], [5000, 31, 0], [1000, 5, 1])\n",
+    "cirriculum_ssm = CurriculumSimple(n_dims, 31, 5, [5000, n_dims, 0], [5000, 31, 0], [1000, 5, 1])\n",
     "\n",
-    "metrics_l1_b5_d10 = train_without_config(\n",
-    "    model_ssm_b5, cirriculum_ssm_b5, model_n_dims=n_dims,\n",
-    "    log_every_steps=10, train_steps=15000, family=\"ssm_gpt2_loop\",\n",
-    "    do_wandb_log=False, seed=None, task_name=\"linear_regression\")"
+    "metrics_l1_ssm = train_without_config(\n",
+    "    model_ssm, cirriculum_ssm, model_n_dims=n_dims,\n",
+    "    log_every_steps=10, train_steps=100, family=\"ssm_gpt2\",\n",
+    "    do_wandb_log=False, seed=None, task_name=\"linear_regression\", device=\"cuda\")"
    ],
    "id": "4d0a62b0577759f9",
-   "execution_count": 7,
-   "outputs": []
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-01T05:07:13.349938Z",
-     "start_time": "2024-08-01T05:06:57.235200Z"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of parameters: 0.44M\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "loss 9.946172714233398: 100%|██████████| 100/100 [01:38<00:00,  1.02it/s]\n"
+     ]
     }
-   },
-   "cell_type": "code",
-   "source": [
-    "from scripts.tasks import get_task_sampler\n",
-    "\n",
-    "model = SelectiveScanModelLooped(n_dims=10,\n",
-    "                                 n_positions=101,\n",
-    "                                 n_embd=256,\n",
-    "                                 n_layer=1,\n",
-    "                                 n_head=4,\n",
-    "                                 pred_type=\"regression\").cuda()\n",
-    "\n",
-    "task_sampler = get_task_sampler(\n",
-    "    task_name=\"linear_regression\",\n",
-    "    batch_size=64,\n",
-    "    n_points=31,\n",
-    "    n_dims=10,\n",
-    "    n_dims_truncated=10,\n",
-    "    device=\"cuda\",\n",
-    ")\n",
-    "\n",
-    "real_task = task_sampler()\n",
-    "xs, ys = real_task.xs.float(), real_task.ys.float()\n",
-    "\n",
-    "horizon_start = max(0, 5 - 20)\n",
-    "model(xs, ys, horizon_start, 5)"
    ],
-   "id": "db8cc4a2433cd5b5",
-   "execution_count": 5,
-   "outputs": []
+   "execution_count": 3
   }
  ],
  "metadata": {
